# string_processing_project

./: .gitignore  CMakeLists.txt  README  ac_dot.cpp  aho_corasick.cpp  aho_corasick.hpp  bitset.hpp  makezip.sh  match.hpp  matcher_list.hpp  memuse.sh  performance.cpp  plots.gp  rabin_karp.cpp  rabin_karp.hpp  rabin_karp_adler.cpp  rabin_karp_adler.hpp  rabin_karp_hash.hpp  readme.txt  science.cpp  test.cpp  timef.h  util.hpp
hyposter/: .gitignore  beamerthemeHYposter.sty  example.tex  poster.tex  split_poster.sh  template_twocolumn.tex
hyposter/tool/: poster
input/: musketeers.txt  musketeers_book.txt  musketeers_patterns.txt  robinson.txt  robinson_patterns.txt  robinsonbook.txt
input/scripts/: Makefile  book_patterns.cpp  mem.sh  memuse.sh  random_patterns.cpp  random_text.cpp  science.py
poster/: LR-B.eps  LR-B.fig  LR-B.tex  LR-I.eps  LR-I.fig  LR-I.tex  README  copy1.eps  copy1.fig  copy1.tex  copy2.eps  copy2.fig  copy2.tex  make_poster  permutation.eps  permutation.fig  permutation.tex  poster.tex  poster_ibwt.aux  poster_ibwt.bbl  poster_ibwt.blg  poster_ibwt.dvi  poster_ibwt.ps  poster_ibwt.tex  poster_ibwt_A4.ps  variable.eps  variable.tex
