set (CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
add_definitions(-std=c++0x)
project (multiple_pattern_match)
set(CMAKE_BUILD_TYPE Release)
set (MATCHER_SRC rabin_karp.cpp aho_corasick.cpp rabin_karp_adler.cpp)
set(CMAKE_CXX_FLAGS "-O2 -Wall -msse4")
add_executable(test test.cpp ${MATCHER_SRC})
add_executable(performance performance.cpp ${MATCHER_SRC})
